--- a/client/src/index.css
+++ b/client/src/index.css
@@ -108,7 +108,6 @@ code {
   background-color: black;
   padding: 20px;
   text-align: center;
-  position: absolute;
   bottom: 0;
   width: 100%;
   margin-top: 100px;
@@ -117,7 +116,7 @@ code {
 .footer-content {
   max-width: 960px;
   margin: 0 auto;
-  padding: 10px; /* Added padding for spacing */
+  padding: 10px; 
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -128,7 +127,7 @@ code {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 15px; /* Added gap between links */
+  gap: 15px; 
 }
 
 .footer-link {
@@ -136,8 +135,8 @@ code {
   display: inline-flex;
   align-items: center;
   font-size: large;
-  color: white; /* Ensures link color is visible */
-  margin: 5px 0; /* Adds vertical spacing between links */
+  color: white; 
+  margin: 5px 0; 
 }
 
 .footer-link:hover {
