--- a/client/src/index.css
+++ b/client/src/index.css
@@ -183,6 +183,9 @@ code {
 .register-container h2 {
   text-align: center;
   margin-bottom: 20px;
+  color: black;
+  font-size: x-large;
+  font-weight: 600;
 }
 
 .register-container input {
@@ -191,6 +194,7 @@ code {
   margin: 10px 0;
   border: 1px solid #ccc;
   border-radius: 5px;
+  color: black;
 }
 
 .register-container .error-message {
