--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,85 +39,20 @@ code {
     monospace;
 }
 
-/* HomeCard Styling start */
-.HomeCard-container {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  min-height: calc(
-    100vh - 100px
-  ); 
-  background-color: black;
+/* Ensure no extra space around the footer */
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
-.card-container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  width: 60%;
-  max-width: 900px;
-  margin-top: 20px; 
-  background-color: black;
-}
-
-.card {
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 350px;
-  height: 400px;
-  padding: 20px;
-  margin: 20px;
-  text-align: center;
-  color: black;
-  transition: transform 0.3s;
-  display: flex;
-  flex-direction: column;
-}
-
-.card:hover {
-  transform: translateY(-10px);
-  cursor: pointer;
-}
-
-.card:not(:last-child) {
-  margin-right: 20px;
-}
-
-.card h2 {
-  margin-bottom: 10px;
-  font-size: larger;
-}
-
-.card img {
-  max-width: 100%;
-  border-radius: 5px;
-  margin-bottom: 10px;
-  align-self: center;
-}
-
-/* Responsive Layout */
-@media (max-width: 768px) {
-  .card-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .card {
-    width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-  }
-}
-/* HomeCard Styling end */
-
-/* Footer start */
 .footer {
   background-color: black;
   padding: 20px;
   text-align: center;
-  bottom: 0;
   width: 100%;
-  margin-top: 100px;
+  position: relative;
+  bottom: 0;
 }
 
 .footer-content {
@@ -130,7 +65,7 @@ code {
 }
 
 .footer-links {
-  margin-top: 10px;
+  margin-top: 5px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -143,7 +78,7 @@ code {
   align-items: center;
   font-size: large;
   color: white;
-  margin: 5px 0;
+  margin: 5px;
 }
 
 .footer-link:hover {
@@ -168,6 +103,7 @@ code {
   }
 }
 /* Footer end */
+
 
 /* Register Styling start */
 .register-container {
